--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,9 @@ TODO
   - it stays fixed when attached to branch
   - backs up when hero attaches to branch
 - cord
-  - single hinge joint to center
-  - several points below to make it look realistic
+  - http://www.rogerhughston.com/archives/481
+  - single distance joint to center
+  - several points to make it look realistic
 
 - branches
   - remove possibility of collisions?
